# sp-transit-monitor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  lambda-deploy.yml  terraform-apply.yml  terraform-plan.yml
dashboards/queries/: coverage_equity.sql  fleet_utilization.sql  headway_regularity.sql  on_time_performance.sql  speed_congestion.sql
databricks/batch/: coverage_equity.py  load_census_demographics.py  load_gtfs_schedules.py
databricks/schemas/: bronze_schemas.py  silver_schemas.py
databricks/streaming/bronze/: ingest_from_s3.py
databricks/streaming/gold/: fleet_utilization.py  headway_regularity.py  on_time_performance.py  speed_congestion.py
databricks/streaming/silver/: clean_enrich_gps.py  stop_arrival_detection.py
databricks/utils/: geo_utils.py  time_utils.py
docs/: architecture.md  cost_estimate.md  data_dictionary.md
lambda/: requirements.txt
lambda/sptrans_producer/: config.py  handler.py  models.py  sptrans_client.py
lambda/tests/: test_handler.py  test_models.py  test_sptrans_client.py
terraform/bootstrap/: main.tf
terraform/environments/dev/: .terraform.lock.hcl  main.tf  variables.tf
terraform/modules/databricks/: main.tf
terraform/modules/kinesis/: main.tf
terraform/modules/lambda/: main.tf
terraform/modules/monitoring/: main.tf
terraform/modules/storage/: main.tf
tests/fixtures/: gtfs_routes.csv  gtfs_stop_times.csv  gtfs_stops.csv  gtfs_trips.csv  sample_api_response.json
tests/integration/: test_lambda_kinesis.py
tests/unit/databricks/: test_geo_utils.py  test_gold_transforms.py  (+2 more)
