[project]
name = "sp-transit-monitor"
version = "0.1.0"
description = "Real-time SP Transit performance monitor using SPTrans OlhoVivo API, AWS Kinesis, and Databricks"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
lambda = [
    "httpx>=0.27,<1.0",
    "pydantic>=2.6,<3.0",
    "boto3>=1.34,<2.0",
]
databricks = [
    "pyspark>=3.5,<4.0",
    "delta-spark>=3.1,<4.0",
    "h3>=3.7,<5.0",
]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
    "pytest-asyncio>=0.23,<1.0",
    "respx>=0.21,<1.0",
    "moto[kinesis,s3]>=5.0,<6.0",
    "ruff>=0.3,<1.0",
    "mypy>=1.8,<2.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["sptrans_producer"]

[tool.pytest.ini_options]
testpaths = ["lambda/tests", "tests"]
markers = [
    "integration: marks integration tests (deselect with '-m \"not integration\"')",
]

[tool.mypy]
python_version = "3.12"
strict = true
